# Fintell

./: .env.example  .gitignore  Dockerfile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  TASKS_SUMMARY.md  docker-compose.yml  pyproject.toml  reference_llm_service.py  requirements.txt  stock_position.json  stock_query.py  test_data_output.json  test_llm_output.json  test_output_data.json  test_weekly_report.html  vx_notice_push.py
.kiro/steering/: product.md  structure.md  tech.md
alembic/: env.py
alembic/versions/: 4a41fdb03e69_initial_migration_create_portfolios_.py
app/: __init__.py  main.py
app/api/: reports.py
app/core/: __init__.py  config.py  database.py  exceptions.py  logging.py
app/models/: __init__.py  base.py  portfolio.py  position.py  report.py  stock_cache.py  stock_data_cache.py
app/services/: data_service.py  indicators.py  llm_service.py  notification_service.py  portfolio_service.py  template_service.py  wind_service.py
docs/: FINAL_PLAN.md  IMPLEMENTATION_GUIDE.md  PRD.md  TASK_1_SUMMARY.md
prompts/: README.md
scripts/: __init__.py  configure_wind.py  convert_template.py  convert_template_to_jinja.py  create_database.py  fix_section1.py  import_initial_data.py  make_template_dynamic.py  quick_test.py  run_weekly_report.py  test_api.py  test_complete_flow.py  test_full_flow.py  test_full_report.py  test_full_report_with_push.py  test_push.py  test_step_by_step.py  test_template_and_json.py  test_wind_data.py  verify_data.py
templates/: README.md  weekly_report.html  weekly_template.html
tests/: __init__.py  test_config.py
(+3 files in other folders)
