[project]
name = "smart-portfolio-manager"
version = "0.1.0"
description = "Smart Portfolio Management System"
authors = [
    {name = "Admin"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "pandas>=2.1.0",
    "requests>=2.31.0",
    "jinja2>=3.1.0",
    "pymysql>=1.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "apscheduler>=3.10.0",
    "bcrypt>=4.1.0",
    "pyjwt>=2.8.0",
    "cryptography>=41.0.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
